# fastapi_todo_jwt

./: .env.template  .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4f5e1ac6d2d1_add_refresh_sessions.py  707e083a533c_enforce_non_null_todo_owner.py  98adc08e9d01_add_users_and_todo_owner_id.py  9f2f44f42e90_make_created_at_timestamptz.py
app/: main.py
app/api/: deps.py
app/api/v1/routes/: authentication.py  todos.py
app/core/: config.py
app/crud/: refresh_session.py  todo.py  user.py
app/db/: database.py
app/models/: refresh_session.py  todo.py  user.py
app/schemas/: authentication.py  todo.py  user.py
app/services/: authentication.py
tests/: conftest.py  test_auth_api.py  test_todos_api.py
