[project]
name = "to-do-list-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.134.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.47",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.1", "pytest-asyncio>=1.2.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Accessing argon2.__version__ is deprecated.*:DeprecationWarning:passlib.handlers.argon2",
]
